html advance project

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -1,21 +1,94 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-     <title>My Webpage</title>    
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>My Web Page</title>    
 </head>
 <body>
     <header>
         <!-- Adding an image inside the header -->
     <div>
-        <a href="#">logo</a>
+        <a href="https//example.com">
+            <img src="http://img.example.com" alt="Logo">
+        </a>
+
+        <!-- Block of 3 Links -->
     </div>
 
         <!-- Adding three links inside the header -->
         <div>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
-            <a href="#">Link</a>
+            <ul>
+                <li><a href="https://example1.com">Link 1</a><li>
+                <li><a href="https://example2.com">Link 2</a></li>
+                </li><a href="https://example3.com">Link 3</a><li>
+            </ul>
         </div>    
     </header>
+
+    <main>
+        <section>
+            <!-- First Block -->
+            <div>
+                <h1>Heading 1</h1>
+                <p>Some text goes here.</p>
+                <button>Click icon</button>
+            </div>
+
+            <!-- Second Block -->
+            <div>
+                <h2>Heading 2</h2>
+                <!-- Block containing 4 sub-blocks -->
+            <div>
+                <img src="image1.jpg" alt="Image1">
+                <h3>Sub-heading 1</h3>
+                <p>Text for sub-block 1.</p>
+            </div>
+            <div>
+                <img src="image2.jpg" alt="Image2">
+                <h3>Sub-heading 2.</h3>
+                <p>Text for sub-block 2.</p>
+            </div> 
+            <div>
+                <img src="image3.jpg" alt="Image3">
+                <h3>Sub-heading 3.</h3>
+                <p>Text for sub-block 3.</p>
+            </div>
+            <div>
+                <img src="image4.jpg" alt="Image4">
+                <h3>Sub-heading 4.</h3>
+                <p>Text for sub-block 4.</p>
+            </div>
+            </div>   
+        </section>
+
+        <!-- New Section for Quote -->
+        <section>
+            <!-- Block for Quote -->
+            <div>
+                <img src="quote-image.jpg" alt="Quote Image">
+                <!-- Nested Block for Quote -->
+            </div>
+            <div>
+                <q>This is a sample quote.</q>
+                <p>Author of the Quote</p>
+                <p>Additional text related to the quote.</p>
+            </div>
+        </section>
+
+        <!-- New Section with Videos-->
+        <section>
+            <h2>Video Section</h2>
+            <!-- Video Blocks -->
+            <div>
+                <!-- Video Block 1 -->
+                <div>
+                    <img src="video-image1.jpg" alt="Video Image 1">
+                    <h3>Video 1</h3>
+                    <p>Description for Video 1.</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>    
 </html>
