html advance project

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -86,9 +86,190 @@
                     <img src="video-image1.jpg" alt="Video Image 1">
                     <h3>Video 1</h3>
                     <p>Description for Video 1.</p>
+                    <!-- Author Block-->
+                    <div>
+                        <img src="author-image1.jpg" alt="Author Image 1">
+                        <h4>Author 1</h4>
+                    </div>
+                    <!-- Rating Block-->
+                    <div>
+                        <div>
+                            <img src="star-image.jpg" alt="Star">
+                            <img src="star-image.jpg" alt="Star">
+                            <img src="star-image.jpg" alt="Star">
+                            <img src="star-image.jpg" alt="Star">
+                            <img src="star-image.jpg" alt="Star">
+                        </div>
+                        <p>5.0 (1234 reviews)</p>
+                    </div>
+                </div>
+
+                <div>
+                    <!-- Video Block 2 -->
+                    <div>
+                        <img src="video-image2.jpg" alt="Video Image 2">
+                        <h3>Video 2</h3>
+                        <p>Description for Video 2.</p>
+                        <!-- Author Block-->
+                        <div>
+                            <img src="author-image2.jpg" alt="Author Image 2">
+                            <h4>Author 2</h4>
+                        </div>
+                        <!-- Rating Block-->
+                        <div>
+                            <div>
+                                <img src="star-image.jpg" alt="Star">
+                                <img src="star-image.jpg" alt="Star">
+                                <img src="star-image.jpg" alt="Star">
+                                <img src="star-image.jpg" alt="Star">
+                                <img src="star-image.jpg" alt="Star">
+                            </div>
+                            <p>5.0 (1234 reviews)</p>
+                        </div>
+                    </div>
+
+                    <div>
+                        <!-- Video Block 3-->
+                        <div>
+                            <img src="video-image3.jpg" alt="Video Image 3">
+                            <h3>Video 3</h3>
+                            <p>Description for  Video 3.</p>
+                            <!-- Author Block-->
+                            <div>
+                                <img src="author-image3.jpg" alt="Author Image 3">
+                                <h4>Author 3</h4>
+                            </div>
+                            <!-- Rating Block -->
+                            <div>
+                                <div>
+                                    <img src="star-image.jpg" alt="Star">
+                                    <img src="star-image.jpg" alt="Star">
+                                    <img src="star-image.jpg" alt="Star">
+                                    <img src="star-image.jpg" alt="Star">
+                                    <img src="star-image.jpg" alt="Star">
+                                </div>
+                                <p>5.0 (1234 reviews)</p>
+                            </div>
+                        </div>
+
+                        <div>
+                            <!-- Video Block 4-->
+                            <div>
+                                <img src="video-image4.jpg" alt="Video Image 4">
+                                <h3>Video 4</h3>
+                                <p>Description for Video 4.</p>
+                                <!-- Author Block-->
+                                <div>
+                                    <img src="author-image4.jpg" alt="Author Image 4">
+                                    <h4>Author 4</h4>
+                                </div>
+                                <!-- Rating Block -->
+                                <div>
+                                    <div>
+                                        <img src="star-image.jpg" alt="Star">
+                                        <img src="star-image.jpg" alt="Star">
+                                        <img src="star-image.jpg" alt="Star">
+                                        <img src="star-image.jpg" alt="Star">
+                                        <img src="star-image.jpg" alt="Star">
+                                    </div>
+                                    <p>5.0 (1234 reviews)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- New Section after Videos List -->
+        <section>
+            <h2>Another Section</h2>
+            <!-- Block Items -->
+            <div>
+                <!-- Block Item 1 -->
+                <div>
+                    <img src="block-image1.jpg" alt="Block Image 1">
+                    <h3>Block Heading 1</h3>
+                    <p>Text for Block 1.</p>
+                    <button>Click Me</button>
+                </div>
+
+                <!-- Block Item 2 -->
+                <div>
+                    <img src="block-image2.jpg" alt="Block Image 2">
+                    <h3>Block Heading 2</h3>
+                    <button>Click Me</button>
+                </div>
+
+                <!-- Block Item 3 -->
+                <div>
+                    <img src="block-image3.jpg" alt="Block Image 3">
+                    <h3>Block Heading 3</h3>
+                    <button>Click Me</button>
+                </div>
+
+                <!-- Block Item 4 -->
+                <div>
+                    <img src="block-image4.jpg" alt="Block Image 4">
+                    <h3>Block Heading 4</h3>
+                    <button>Click Me</button>
+                </div>
+            </div>
+        </section>
+
+        <!-- FAQ Section -->
+        <section>
+            <h2>Frequently Asked Questions</h2>
+            <!-- Row Blocks -->
+            <div>
+                <!-- Row Block 1 -->
+                <div>
+                    <!-- Item Block 1 -->
+                    <div>
+                        <h3>Is Figma only for product designers</h3>
+                        <p>No, Figma is used by developers and different poeple can use it.</p>
+                    </div>
+                    <!-- Item Block 2 -->
+                    <div>
+                        <h3>How user friendly is it?</h3>
+                        <p>Check out user reccommendations below for reference.</p>
+                    </div>
+                </div>
+                <!-- Row Block 2 -->
+                <div>
+                    <!-- Item Block 3 -->
+                    <div>
+                        <h3>Can we import files from Figma?</h3>
+                        <p>Yes you can.</p>
+                    </div>
+                    <!-- Item Block 4 -->
+                    <div>
+                        <h3>Is it free?</h3>
+                        <p>Yes, it's mostly free, but we have the premium version too.</p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
+    <!-- Footer Section -->
+    <footer>
+        <!-- Global Block for Centering -->
+        <div>
+            <!-- Row Block in Footer -->
+            <div>
+                <!-- Image -->
+                <img src="footer-image.jpg" alt="Footer Image">
+                <!-- Block with Images and Text -->
+                <div>
+                    <!-- Images with Links -->
+                    <a href="#"><img src="link-image1.jpg" alt="Link Image 1"></a>
+                    <a href="#"><img src="link-image2.jpg" alt="Link Image 2"></a>
+                    <a href="#"><img src="link-image3.jpg" alt="Link Image 3"></a>
+                    <!-- Text -->
+                    <p>Additional footer text.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>    
 </html>
